--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 #map-canvas {
 	width: 100%;
+	height: 75%;
 }
 
-html, body, #map-canvas {
+html, body {
 	height: 100%;
 }
 
@@ -16,9 +17,14 @@ body {
 }
 
 .list-view {
-	width: 25%;
-	height: 100%;
+	width: 100%;
+	height: 25%;
 	position: absolute;
 	z-index: 1;
 	background-color: white;
 }
+
+.form {
+	padding: 10px;
+}
+
