--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #map-canvas {
 	width: 100%;
-	height: 75%;
+	height: 66%;
 }
 
 html, body {
@@ -18,13 +18,15 @@ body {
 
 .list-view {
 	width: 100%;
-	height: 25%;
+	height: 33%;
 	position: absolute;
 	z-index: 1;
 	background-color: white;
 }
 
-.form {
-	padding: 10px;
+.search-box {
+	font-size: 1em;
+	width: 100%;
+	-webkit-appearance: none;
+	height: 40px;
 }
-
