--- a/style.css
+++ b/style.css
@@ -53,6 +53,37 @@ body {
 	flex-grow: 1;
 }
 
+.key {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	align-items: center;
+	margin: 5px;
+}
+
+.filter {
+	margin: 0;
+	padding: 0;
+	font-size: 1em;
+	border: 1px solid black;
+	background-color: white;
+	max-width: 120px;
+	height: 25px;
+	flex-grow: 1;
+	flex-basis: 0;
+}
+
+.filter-text {
+	padding-right: 5px;
+}
+
 @media screen and (min-width: 550px) {
 	.list-item {
 		width: 48.5%;
