--- a/style.css
+++ b/style.css
@@ -53,12 +53,12 @@ body {
 	flex-grow: 1;
 }
 
-.key-container {
+.show-container {
 	max-width: 500px;
 	margin: 0 auto;
 }
 
-.key {
+.show {
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
@@ -73,7 +73,7 @@ body {
 	margin: 5px;
 }
 
-.show {
+.show-item {
 	margin: 0;
 	padding: 0;
 	font-size: 1em;
