--- a/style.css
+++ b/style.css
@@ -101,8 +101,17 @@ body {
 	color: green;
 }
 
+.blue-text {
+	color: blue;
+}
+
 .tips {
 	line-height: 1.4em;
+}
+
+.hours {
+	font-size: .9em;
+	padding-top: 5px;
 }
 
 
