--- a/style.css
+++ b/style.css
@@ -119,6 +119,11 @@ body {
 	color: gray;
 }
 
+.plain-link {
+	color: black;
+	text-decoration: none;
+}
+
 
 @media screen and (min-width: 320px) {
 	.show {
