--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-#map-canvas {
-	width: 100%;
-	height: 66%;
-}
+/* --------------- general -------------- */
 
 html, body {
 	height: 100%;
@@ -16,13 +13,12 @@ body {
 	font-family: arial;
 }
 
-.list-view {
-	width: 98%;
-	height: 33%;
-	position: absolute;
-	z-index: 1;
-	background-color: white;
+#map-canvas {
+	width: 100%;
+	height: 66%;
 }
+
+/* -------------- search box -------------- */
 
 .search-box {
 	font-size: 1em;
@@ -31,27 +27,7 @@ body {
 	height: 40px;
 }
 
-.list {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	flex-wrap: wrap;
-	-webkit-flex-wrap: wrap;
-}
-
-.list-item {
-	font-size: 1.5em;
-	line-height: 2em;
-	border: 1px solid black;
-	text-align: center;
-	width: 97%;
-	flex-grow: 1;
-}
+/* ------------- filter options --------------- */
 
 .filter-container {
 	max-width: 500px;
@@ -84,14 +60,53 @@ body {
 	flex-grow: 1;
 }
 
-.show-text {
-	padding-right: 5px;
-}
-
 .filter-img {
 	display: inline-block;
 	width: 12px;
 }
+
+/* ------------------ list view ----------------- */
+
+.list-container {
+	width: 98%;
+	height: 33%;
+	position: absolute;
+	z-index: 1;
+	background-color: white;
+}
+
+.list {
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+}
+
+.list-item {
+	font-size: 1.5em;
+	line-height: 2em;
+	border: 1px solid black;
+	text-align: center;
+	width: 97%;
+	flex-grow: 1;
+}
+
+/* --------------- info window content -------------- */
+
+/* ------ basic info ------ */
+
+.hours {
+	font-size: .9em;
+	padding-top: 5px;
+}
+
+/* -- popularity/category -- */
 
 .rating {
 	font-size: 1.3em;
@@ -101,17 +116,8 @@ body {
 	color: green;
 }
 
-.blue-text {
-	color: blue;
-}
-
 .line-height {
 	line-height: 1.4em;
-}
-
-.hours {
-	font-size: .9em;
-	padding-top: 5px;
 }
 
 .category {
@@ -119,23 +125,28 @@ body {
 	color: gray;
 }
 
+/* --------- photos --------- */
+
+.best-photo {
+	margin-right: 5px;
+}
+
+.best-photo,
+.second-photo {
+	margin-bottom: 5px;
+}
+
+/* ---------- tips ---------- */
+
 .plain-link {
 	color: black;
 	text-decoration: none;
 }
 
-.best-photo {
-	margin-right: 5px;
-	margin-bottom: 5px;
-}
-
-.second-photo {
-	margin-bottom: 5px;
-}
-
+/* ------------------ media queries -------------------- */
 
 @media screen and (min-width: 320px) {
-	.show {
+	.filter {
 		flex-basis: 0;
 	}
 }
