--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 #map-canvas {
 	width: 100%;
-	height: 100%;
+	height: 85%;
 }
 
 /* -------------- search box -------------- */
@@ -58,6 +58,7 @@ body {
 	max-width: 120px;
 	height: 25px;
 	flex-grow: 1;
+	-webkit-flex-grow: 1;
 }
 
 .filter-img {
@@ -103,8 +104,8 @@ body {
 
 .show-locations {
 	position: absolute;
-	bottom: 0;
-	right: 7px;
+	bottom: 12px;
+	right: 9px;
 	font-size: 50px;
 	font-weight: bold;
 	background-color: white;
@@ -115,6 +116,11 @@ body {
 }
 
 /* --------------- info window content -------------- */
+
+.info-window {
+	max-height: 300px;
+	overflow-y: auto;
+}
 
 /* ------ basic info ------ */
 
@@ -175,5 +181,11 @@ body {
 
 	.show-locations {
 		display: none;
+	}
+}
+
+@media screen and (orientation: landscape) {
+	.info-window {
+		max-height: 175px;
 	}
 }
